--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
                                     <li><a href="it-consutling.html">IT Consulting</a></li>
                                 </ul>
                               </li>
-                              <li> <a href="#contact">Careers</a> </li>   
+                              <li> <a href="careers.html">Careers</a> </li>   
                               <li> <a href="contact.html">Contact Us</a></li>
                            </ul>
                         </nav>
@@ -266,12 +266,12 @@
                      </ul>
                   </div>
             </div>
-            <div class="row">
+            <div class="row footer-info">
                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
                   <div class="contact">
                      <h3>conatct us</h3>
                      <span>123 Second Street Fifth Avenue,<br>
-                       Manhattan, New York
+                       Manhattan, New York<br>
                         +987 654 3210</span>
                   </div>
                </div>
@@ -298,20 +298,10 @@
                           <li> <a href="#">Technical support</a></li>
                   </div>
                </div>
-                 <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
-                  <div class="contact">
-                     <h3>IT NEXT THEME</h3>
-                     <span>Tincidunt elit magnis <br>
-                     nulla facilisis. Dolor <br>
-                  sagittis maecenas. <br>
-               Sapien nunc amet <br>
-            ultrices, </span>
-                  </div>
-               </div>
             </div>
          </div>
             <div class="copyright">
-               <p>Copyright 2019 All Right Reserved By <a href="https://html.design/">Free html Templates</a> Distributed By <a href="https://themewagon.com">ThemeWagon </a></p>
+               <p>Copyright 2019 All Right Reserved By <a href="index.html"> ICONIX PVT LTD</p>
             </div>
          
       </div>
