--- a/product.html
+++ b/product.html
@@ -79,7 +79,7 @@
                               <li> <a href="about.html">About</a> </li>
                               <li class="active"> <a href="product.html">Product</a> </li>
                               <li> <a href="contact.html">Contact</a> </li>
-                              <li class="mean-last"> <a href="#contact">Signup</a> </li>
+                              <li class="mean-last"> <a href="careers.html">Signup</a> </li>
                                
                            </ul>
                         </nav>
